# eml

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  main.cpp  mdsnippets.json  scanner.cpp  scanner.hpp  token_table.impl  value.cpp  value.hpp  vm.cpp  vm.hpp
.github/workflows/: generateMarkdown.yml
cmake/: clang-tidy.cmake  compiler.cmake  doxygen.cmake
docs/: Doxyfile.in
docs/doxygen/: Doxyfile.in  build.md  grammar.md  main.md
docs/src/: Doxyfile.in  build.md  grammar.md  language_references.md  main.md
src/: ast.hpp  bytecode.cpp  bytecode.hpp  code_generator.cpp  code_generator.hpp  common.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  eml.cpp  eml.hpp  eml_version.cpp.in  error.cpp  error.hpp  expected.hpp  main.cpp  memory.cpp  memory.hpp  meta.hpp  module.hpp  not_null.hpp  object.cpp  object.hpp  opcode.inc  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  string.cpp  string.hpp  token_table.impl  token_table.inc  type.cpp  type.hpp  type_checker.cpp  type_checker.hpp  value.cpp  value.hpp  vm.cpp  (+1 more)
src/cli/: CMakeLists.txt  main.cpp
src/cli/web/: main.cpp
src/disassembler/: CMakeLists.txt  eml_disassembler.cpp  eml_disassembler.hpp
src/try_elm/src/: Repl.re  index.html
src/try_eml/: .gitignore  package.json
src/try_eml/src/: Ace.re  Index.re  index.html
src/web/: CMakelists.txt  bsconfig.json  main.cpp  package-lock.json  package.json
src/web/cpp/: CMakeLists.txt
src/web/src/: Component1.bs.js  Component2.bs.js  Index.bs.js  Index.re  Repl.bs.js  Repl.re  index.html
tests/: .clang-tidy  .codecov.yml  CMakeLists.txt  ast_test.cpp  cast_test.cpp  compiler_test.cpp  integration_test.cpp  main.cpp  memory_test.cpp  parser_test.cpp  scanner_test.cpp  string_test.cpp  type_check_test.cpp  util.cpp  util.hpp  value_test.cpp  vm_test.cpp  vm_test_util.hpp
tests/approval_tests/if/: Else_If.approved.docs.txt  Else_If.approved.eml  Else_If.approved.txt  If_Else.approved.txt
tests/approval_tests/syntax_errors/: missing_).approved.txt  missing_}.approved.txt
tests/approval_tests/type_errors/: Boolean_in_arithmatics.approved.txt  Branch_type_mismatch.approved.txt  Number_in_boolean_expression.approved.txt  Number_in_branch.approved.txt
tests/expected/: assignment.cpp  bases.cpp  constructors.cpp  emplace.cpp  extensions.cpp  issues.cpp  noexcept.cpp  observers.cpp
tests/utils/: approval_using_sections_namer.cpp  approval_using_sections_namer.hpp
